# WallofX

./: .gitignore  Agents.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
scripts/: init.sh
wallofx/: __init__.py
wallofx/src/: __init__.py
wallofx/src/bot/: __init__.py  handler.py
wallofx/src/image/: __init__.py  generator.py
wallofx/src/twitter/: __init__.py  extractor.py
